--- a/front/src/Components/Gallery/Gallery.css
+++ b/front/src/Components/Gallery/Gallery.css
@@ -3,7 +3,7 @@
     top:7rem;
     left:0;
     padding:0 2rem;
-    z-index: -1;
+    z-index: -4;
     --btn-red:#EB5757;
     --dark-red:#B91C1C;
     --light-red:#FEE2E2;
@@ -32,18 +32,18 @@
   .modal{
     /* animation:stretch 500ms ease-in-out; */
 
-      position:absolute;
+      position:fixed;
       top:0rem;
       margin:auto;
       width:23rem;
+      top:50%;
       left:50%;
-      transform:translateX(-50%);
+      transform:translate(-50%,-50%);
       background-color: #fff;
       border:1px solid var(--input-border);
       padding:0.75rem;
       border-radius:1rem;
-
-
+      z-index:2;
 
   }
 
@@ -62,7 +62,8 @@
   }
 
   .red-btn{
-    background:var(--btn-red);
+    background:#EB5757;
+    
     color:#FFF;
   }
 
@@ -78,3 +79,4 @@
     align-items: center;
 
 }
+
